# DeepPipe

./: LICENSE  README.md  meta_test.py  meta_train.py  pyproject.toml  readme.md  requirements_all.txt  requirements_deep_pipe.txt  test_openml.py  utils.py
automl_baselines/: oboe_bench_test.py  pmf_bench_test.py
baselines/baselines/: bo.py  rgpe.py  test.py
baselines/fmlp/: fmlp.py  test_fmlp.py
baselines/oboe/: qr_computation.py
baselines/pmf/: bo.py  requirements.txt  run.py
checkpoints/DeepPipe/: log.txt  weights
checkpoints/DeepPipe/train/: events.out.tfevents.1652861292.sebastian-Precision-7550.10257.0  events.out.tfevents.1652861462.sebastian-Precision-7550.10471.0  events.out.tfevents.1652861576.sebastian-Precision-7550.10712.0  events.out.tfevents.1652861588.sebastian-Precision-7550.10765.0  events.out.tfevents.1652863049.sebastian-Precision-7550.13044.0  events.out.tfevents.1652863092.sebastian-Precision-7550.13141.0  events.out.tfevents.1652863155.sebastian-Precision-7550.13271.0  events.out.tfevents.1652863279.sebastian-Precision-7550.13530.0  events.out.tfevents.1652863528.sebastian-Precision-7550.13779.0  events.out.tfevents.1652863612.sebastian-Precision-7550.13913.0
checkpoints/DeepPipe/valid/: events.out.tfevents.1652861292.sebastian-Precision-7550.10257.1  events.out.tfevents.1652861462.sebastian-Precision-7550.10471.1  events.out.tfevents.1652861576.sebastian-Precision-7550.10712.1  (+7 more)
checkpoints/DeepPipePMF/: weights
checkpoints/DeepPipeTOboe/: weights
src/deeppipe_api/: deeppipe.py  modules.py  requirements.txt  utils.py
(+20 files in other folders)
